change hostname to the heroku app

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,7 +29,7 @@
 			<div class="controls"><button type="submit" class="btn">Login or Sign up</button></div>
 		</div>
 		
-		<input type="hidden" name="redirectUrl" value="http://bryan4.flixsteroffice.com:9000/parseUser/" />
+		<input type="hidden" name="redirectUrl" value="http://flixster-login-window.herokuapp.com/parseUser/" />
 		</fieldset>
 	</form>
 	<script src="@routes.Assets.at("javascripts/loginform.js")" type="text/javascript"></script>
